# aiof

./: TODO.tasks  aclocal.m4  configure  configure.ac
.anjuta/session/: anjuta.session
branches/1.0/: Makefile.in  configure
branches/1.0/.anjuta/: default.profile
branches/1.0/src/: classname.h  interface.h  zernike.cpp
src/: Makefile.in  aiof.glade  neuron.h  perceptron.cpp  recognition_engine.cpp  recognition_engine.h  typedefs.h  zernike.h
trunk/: Makefile.am  TODO.tasks  configure.ac
trunk/.anjuta/: default.profile
trunk/.anjuta/session/: anjuta.session  dock-layout.xml
trunk/src/: Makefile.am  Makefile.in  aiof.glade  gaiof.cpp  gaiof.h  main.cpp  neuron.cpp  perceptron.cpp  perceptron.h  recognition_engine.cpp  recognition_engine.h  utils.cpp  utils.h  zernike.h
